将快速查询改为字母分类查询

--- a/src/styles/modals/_index.scss
+++ b/src/styles/modals/_index.scss
@@ -6,6 +6,7 @@
 @import 'common/close-button';
 @import 'common/picture-changer';
 @import 'common/large-search';
+@import 'common/search-letter';
 @import 'common/small-search';
 @import 'common/result-list';
 
