--- a/src/styles/pace.scss
+++ b/src/styles/pace.scss
@@ -13,6 +13,7 @@
   pointer-events: none;
 
   .pace-progress {
+    background: #29d;
     position: fixed;
     z-index: 2000;
     top: 0;
@@ -20,8 +21,6 @@
 
     width: 100%;
     height: 3px;
-
-    background: white;
   }
   //.pace-activity {
   //  position: fixed;
