--- a/src/styles/modals/_department.scss
+++ b/src/styles/modals/_department.scss
@@ -35,9 +35,12 @@
       padding: 8px 0 0;
       min-height: 176px;
       max-height: 352px;
-      .bmResults{
+      .dw_bm_Results{
           overflow-y: scroll;
           width: 400px;
+          li{
+            display: block;
+          }
       }
       .yhResults{
           overflow-y: scroll;
@@ -48,11 +51,12 @@
   
         box-sizing: border-box;
         margin: 0;
-        padding: 6px 16px;
+        padding: 6px 26px;
   
         list-style: none;
   
         cursor: pointer;
+        border: 1px solid #fff;
   
         color: $mine-shaft;
         .title {
@@ -65,6 +69,16 @@
           vertical-align: middle;
   
           @include text-elipsis();
+        }
+        .arrow {
+          position: absolute;
+          left: 12px;
+          top: 15px;
+          width: 0px;
+          height: 0px;
+          border: 6px dashed transparent;
+          border-left: 8px solid #aaa;
+          border-right: 0;
         }
         .hint {
           font-size: 13px;
@@ -81,11 +95,23 @@
           color: white;
           background-color: $dark-sky-blue;
           text-shadow: 0 1px 1px darken($dark-sky-blue, 10);
+          border: 1px solid $dark-sky-blue;
           .hint {
             display: inline-block;
   
             opacity: .7;
           }
+        }
+        &--open {
+          .arrow{
+            transform: rotate(90deg);
+          }
+          .results__item__bm {
+            display: block;
+          }
+        }
+        &--selected {
+          border: 1px dashed #aaa;
         }
         &--suggestion {
           font-weight: 400 !important;
@@ -146,6 +172,9 @@
             text-align: right;
             vertical-align: middle;
           }
+          &__bm{
+            display: none;
+          }
           &--active {
             font-weight: 500;
     
@@ -177,6 +206,10 @@
             }
           }
         }
+      }
+      ul{
+        padding: 0px;
+        margin: 0px;
       }
   }
   
