--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -28,6 +28,11 @@
     fill: $dark-sky-blue;
   }
 
+  &--white {
+    color: $dark-white;
+    fill: $dark-white;
+  }
+
   &--dropdown {
     color: rgba(0,0,0,.25);
     fill: rgba(0,0,0,.25);
