--- a/src/styles/modals/_department.scss
+++ b/src/styles/modals/_department.scss
@@ -40,6 +40,15 @@
           width: 400px;
           li{
             display: block;
+            & > .results__item{
+              padding-left: 36px;
+            }
+            .icon{
+              font-size: 20px;
+              width: 20px;
+              height: 20px;
+              vertical-align: text-bottom;
+            }
           }
       }
       .yhResults{
@@ -72,7 +81,7 @@
         }
         .arrow {
           position: absolute;
-          left: 12px;
+          left: 24px;
           top: 15px;
           width: 0px;
           height: 0px;
