通讯录字母选择添加效果

--- a/src/styles/modals/common/_search-letter.scss
+++ b/src/styles/modals/common/_search-letter.scss
@@ -8,11 +8,14 @@
     text-align: center;
     text-decoration: none;
     color: #656565;
+    transition: 0.1s all ease-out;
     &.flex3 {
       flex: 3;
     }
     &.selected {
-      color: #468ee5
+      font-weight: bold;
+      color: #468ee5;
+      transform: scale(1.3);
     }
   }
 }
