通讯录增加群组分类

--- a/src/styles/modals/common/_search-letter.scss
+++ b/src/styles/modals/common/_search-letter.scss
@@ -4,18 +4,22 @@
   flex-flow: row wrap;
   &-item{
     flex: 1;
-    width: 20px;
     text-align: center;
     text-decoration: none;
     color: #656565;
-    transition: 0.1s all ease-out;
+    span{
+      display: inline-block;
+      transition: 0.1s all ease-out;
+    }
     &.flex3 {
       flex: 3;
     }
     &.selected {
       font-weight: bold;
       color: #468ee5;
-      transform: scale(1.3);
+      span{
+        transform: scale(1.3);
+      }
     }
   }
 }
