调整组织结构间距，默认选中单位第一个部门

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -127,6 +127,7 @@ $modal-header-height: 60px;
 $modal-header-icon-color: rgba(black, .4);
 $modal-text-color: rgb(77, 77, 77);
 $modal-text-light-color:  rgb(101, 101, 101);
+$modal-text-item-height: 28px;
 
 // Login
 $login-text-color: #8ba8cb;
