--- a/src/styles/modals/_department.scss
+++ b/src/styles/modals/_department.scss
@@ -39,69 +39,14 @@
           padding-left: 10px;
           overflow-y: scroll;
           width: 400px;
-          li{
-            display: block;
-            & > .results__item{
-              padding-left: 36px;
-            }
-            .icon{
-              font-size: 20px;
-              width: 20px;
-              height: 20px;
-              vertical-align: text-bottom;
-            }
-          }
-          .results__item__bm {
-            position: relative;
-            display: block;
-          }
-          .results__item::before {
-            position: absolute;
-            left: 7px;
-            top: 0px;
-            height: 100%;
-            width: 1px;
-            border-left: 1px dashed #aaa;
-            content: '';
-          }
-          .results__item::after {
-            position: absolute;
-            left: 8px;
-            top: 21px;
-            height: 1px;
-            width: 10px;
-            border-top: 1px dashed #aaa;
-            content: '';
-          }
-          .results__item__bm .results__item::before{
-            top: -10px;
-            bottom: 10px;
-            height: auto;
-          }
-          .results__item__bm .results__item::after{
-            width: 16px;
-          }
-          .results__item__dw:first-child .results__item::before{
-            top: 21px;
-            bottom: 0px;
-            height: auto;
-          }
-          .results__item__bm:last-child>.results__item::before{
-            height: 29px;
-            bottom: auto;
-          }
-          .results__item__dw:last-child>.results__item::before{
-            top: 0px;
-            height: 21px;
-          }
       }
       .yhResults{
           overflow-y: scroll;
           width: 400px;
       }
       &__item {
-        line-height: 32px;
-  
+        line-height: $modal-text-item-height;
+
         box-sizing: border-box;
         margin: 0;
         padding: 0 26px;
@@ -109,12 +54,11 @@
         list-style: none;
   
         cursor: pointer;
-        border: 1px solid #fff;
   
         color: $mine-shaft;
         .title {
           font-size: 15px;
-          line-height: 32px;
+          line-height: $modal-text-item-height;
   
           display: inline-block;
 
@@ -125,53 +69,19 @@
   
           @include text-elipsis();
         }
-        .arrow {
-          position: absolute;
-          left: 24px;
-          top: 15px;
-          width: 0px;
-          height: 0px;
-          border: 6px dashed transparent;
-          border-left: 8px solid #aaa;
-          border-right: 0;
-        }
         .hint {
           font-size: 13px;
-          line-height: 32px;
+          line-height: $modal-text-item-height;
   
           display: none;
   
           text-align: right;
           vertical-align: middle;
         }
-        &--open {
-          .arrow{
-            transform: rotate(90deg);
-          }
-        }
         &--active {
           .title {
             font-weight: 500;           
-            // color: white;
             background-color: #ebf4fb;
-            // text-shadow: 0 1px 1px darken(#ebf4fb, 10);
-          }
-          .hint {
-            display: inline-block;
-  
-            opacity: .7;
-          }
-        }
-        &--selected {
-          .title{
-            color: #fff;
-            background: $dark-sky-blue;
-          } 
-          &:hover{
-            .title{
-              font-weight: bold; 
-              text-shadow: 0 1px 1px darken($dark-sky-blue, 10);
-            }
           }
         }
         &--suggestion {
@@ -194,89 +104,6 @@
         }
       }
     }
-
-    .dwResults {
-        margin: 0;
-        padding: 8px 0 0;
-        min-height: 176px;
-        max-height: 352px;
-        overflow-y: scroll;
-        &__item {
-          line-height: 32px;
-    
-          box-sizing: border-box;
-          margin: 0;
-          padding: 6px 16px;
-    
-          list-style: none;
-    
-          cursor: pointer;
-    
-          color: $mine-shaft;
-          .title {
-            font-size: 15px;
-            line-height: 32px;
-    
-            display: inline-block;
-    
-            user-select: none;
-            vertical-align: middle;
-    
-            @include text-elipsis();
-          }
-          .hint {
-            font-size: 13px;
-            line-height: 32px;
-    
-            display: none;
-    
-            text-align: right;
-            vertical-align: middle;
-          }
-          &__bm{
-            display: none;
-          }
-          &--active {
-            .title{
-              font-weight: 500;     
-              // color: white;
-              background-color: #ebf4fb;
-              // text-shadow: 0 1px 1px darken(#ebf4fb, 10);
-            }
-            
-            .hint {
-              display: inline-block;
-    
-              opacity: .7;
-            }
-          }
-          &--suggestion {
-            font-weight: 400 !important;
-    
-            display: block;
-    
-            cursor: default !important;
-            text-align: center;
-    
-            color: $dove-gray !important;
-            background-color: white !important;
-            text-shadow: none !important;
-            & > span {
-              display: block;
-            }
-            .button {
-              margin-top: 10px;
-            }
-          }
-        }
-      }
-      ul{
-        padding: 0px;
-        margin: 0px;
-      }
-      .children-box{
-        padding-left: 20px;
-      }
   }
   
   
