--- a/src/styles/modals/_modal.scss
+++ b/src/styles/modals/_modal.scss
@@ -72,6 +72,28 @@
       margin-top: -6px;
     }
   }
+  .header {
+    font-size: 13px;
+    line-height: 20px;
+
+    padding: 6px 16px;
+
+    cursor: default;
+    user-select: none;
+
+    color: rgba(0, 0, 0, .5);
+
+    box-shadow: 0 1px 0 0 rgba(0,0,0,.1);
+
+    @include clearfix();
+    span,
+    strong {
+      display: inline-block;
+    }
+    .pull-right {
+      margin-left: 6px;
+    }
+  }
 }
 
 // Fullscreen modal styles
