--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,6 +21,8 @@ $mine-shaft: #393939;
 $cornflower-blue: #599cf1;
 $dorado: #575757;
 $sea-pink: #ea919c;
+$light-blue: #f2f8fd;
+
 // Placeholder color
 $color-empty: #b8b8b8;
 $color-lblue: #59a2be;
