登陆界面和loading改版

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,7 @@ $cornflower-blue: #599cf1;
 $dorado: #575757;
 $sea-pink: #ea919c;
 $light-blue: #f2f8fd;
+// $light-blue: rgb(188, 240, 188);
 
 // Placeholder color
 $color-empty: #b8b8b8;
