--- a/src/styles/components/_splash-screen.scss
+++ b/src/styles/components/_splash-screen.scss
@@ -1,18 +1,19 @@
 // splash screen
 .splash-screen {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 5000;
+  z-index: 8;
 
-  background-color: $body-background-color;
+  background-color: $light-blue;
   .logo {
-    width: 152px;
-    height: 152px;
+    width: 115px;
+    height: 115px;
+    margin-top: -40px;
 
-    background-image: url(/assets/images/logo_splash.png);
+    background-image: url(/assets/images/logo3.png);
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: contain;
