--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,14 +1,12 @@
 .login-new {
   position: relative;
+  z-index: auto!important;
 
   max-width: 1024px;
   height: 100%;
   margin: 0 auto;
 
   transition: padding $default-transition-duration, opacity 350ms ease-out;
-
-  color: white;
-  background-color: $bismark;
 
   &__welcome {
     position: relative;
@@ -43,14 +41,14 @@
       width: 100%;
       padding: 0 70px;
 
-      color: $login-text-color;
+      // color: $login-text-color;
       p {
         margin: 8px 0 0;
       }
       a {
         text-decoration: none;
 
-        color: $login-text-color;
+        // color: $login-text-color;
         &:hover {
           text-decoration: underline;
         }
@@ -85,12 +83,20 @@
   }
   &__forms {
     position: relative;
+    z-index: 5;
+    width: 426px;
+    height: auto;
+    padding-top: 28px;
+    background: rgba(65, 65, 65, 0.2);
+    border-radius: 3;
+    
 
     box-sizing: border-box;
-    height: 100%;
-    padding: 50px;
     & > div {
-      width: 100%;
+      width: 390px;
+      padding-top: 26px;
+      margin-bottom: 40px;
+      box-sizing: border-box;
       & > a {
         font-size: 14px;
 
@@ -130,7 +136,7 @@
         top: 50px;
       }
       footer {
-        margin-top: 36px;
+        margin-top: 10px;
       }
       .spinner {
         position: absolute;
@@ -172,18 +178,18 @@
 
       .input__material {
         label {
-          color: rgba(white, .3);
+          // color: rgba(white, .3);
         }
         input {
           box-shadow: 0 1px 0 0 rgba(white, .15);
-          color: white;
+          // color: white;
         }
         &--disabled {
           border-bottom: 1px dotted rgba(white, .1);
         }
         &--focus {
           label {
-            color: rgba(white, .8) !important;
+            // color: rgba(white, .8) !important;
           }
         }
       }
@@ -343,6 +349,113 @@
       opacity: .7;
     }
   }
+}
+.login-bg-box{
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  color: black!important;
+  .login-title{
+    position: relative;
+    display: inline-block;
+    width: 80px;
+    margin: 0px 0 0 20px;
+    font-size: 0px;
+    font-weight: normal;
+    color: #fff;
+    line-height: 1.2;
+    span:first-child {
+      font-size: 38px;
+    }
+    span:last-child {
+      position: absolute;
+      left: 13px;
+      bottom: -5px;
+      font-size: 16px;
+      font-family: arial;
+    }
+  }
+  .login-input {
+    width: 100%;
+    height: 69px;
+    box-sizing: border-box;
+    width: 100%;
+    &-user {
+      input {
+        background-image: url('../../assets/images/User.png');
+      }
+    }
+    &-password {
+      input {
+        background-image: url('../../assets/images/Password.png');
+      }
+    }
+    input {
+      width: 321px;
+      height: 33px;
+      padding: 0px;
+      border: 1px solid #eaeaec;
+      text-indent: 33px;
+      box-shadow: 0 0 0 1px #f7f8fb inset!important;  
+      background-color: #fff;
+      background-size: 15px auto;
+      background-repeat: no-repeat;
+      background-position: 9px center;
+    }
+    label{
+      display: none;
+    }
+    &.input__material--focus {
+      box-shadow: none;
+      input {
+        box-shadow: 0 0 0 1px #f7f8fb inset!important;
+      }
+    }
+    .error {
+      top: 40px;
+      left: 33px;
+      font-size: 12px;
+    }
+  }
+  button {
+    width: 329px;
+    height: 39px;
+    font-size: 15px;
+    background: #41d79e;
+    &:hover {
+      background: rgba(#41d79e, 0.8);
+    }
+    &:focus {
+      background: #41d79e;
+    }
+    &:active {
+      background: #3ac08d;
+    }
+    &[disabled] {
+      background-color: #7baa97!important;
+    }
+  }
+  
+  .bottom-info {
+    position: absolute;
+    z-index: 3;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 38px;
+    color: #fff;
+    line-height: 38px;
+    text-align: center;
+    background: rgba(65, 65, 65, 0.2);
+  }
+}
+.login-bg-bottom{
+  position: absolute;
+  z-index: 3;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
 }
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
