--- a/src/styles/pace.scss
+++ b/src/styles/pace.scss
@@ -11,16 +11,42 @@
 .pace {
   user-select: none;
   pointer-events: none;
+  position: absolute;
+  z-index: 1999;
+  top: 50%;
+  left: 50%;
+  margin-left: -160px;
+  margin-top: 140px;
+  width: 320px;
+  height: 30px;
+  overflow: hidden;
+  border-radius: 20px;
+  background: url('/assets/images/stripe3.png') left top no-repeat;
+  background-size: contain;
+
+  &::after {
+    position: absolute;
+    z-index: 2001;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: url('/assets/images/stripe1.png') left top no-repeat;
+    background-size: contain;
+  }
+
 
   .pace-progress {
-    background: #29d;
-    position: fixed;
+    position: absolute;
     z-index: 2000;
     top: 0;
     right: 100%;
 
     width: 100%;
-    height: 3px;
+    height: 100%;
+    background: url('/assets/images/stripe2.png') left top no-repeat;
+    background-size: 100% 100%;
   }
   //.pace-activity {
   //  position: fixed;
@@ -47,7 +73,6 @@
 
 .pace-running {
   .splash-screen {
-    z-index: 1;
 
     opacity: 1;
   }
