--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -376,16 +376,26 @@
   .login-input {
     width: 100%;
     height: 69px;
+    padding-top: 1px;
     box-sizing: border-box;
     width: 100%;
+    label {
+      position: absolute;
+      transform: translate3d(0, 0, 0) !important;
+      left: 32px;
+      top: 0px;
+      width: 35px;
+      height: 35px;
+      text-indent: -99999px;
+    }
     &-user {
-      input {
-        background-image: url('../../assets/images/User.png');
+      label {
+        background: url('../../assets/images/User.png') center center no-repeat;
       }
     }
     &-password {
-      input {
-        background-image: url('../../assets/images/Password.png');
+      label {
+        background: url('../../assets/images/Password.png') center center no-repeat;;
       }
     }
     input {
@@ -399,9 +409,6 @@
       background-size: 15px auto;
       background-repeat: no-repeat;
       background-position: 9px center;
-    }
-    label{
-      display: none;
     }
     &.input__material--focus {
       box-shadow: none;
