--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -53,9 +53,7 @@ $sticker-max-size: 180px;
         width: 124px;
         height: 124px;
         padding: 20px;
-
-        border: 3px solid rgba(black, .12);
-        border-radius: 50%;
+        background: url("/assets/images/bg-logo.png") center center no-repeat;
         .icon {
           width: 100%;
           height: 100%;
