--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -6,7 +6,7 @@
   height: 100%;
   margin: 0 auto;
 
-  transition: padding $default-transition-duration, opacity 350ms ease-out;
+  // transition: padding $default-transition-duration, opacity 350ms ease-out;
 
   &__welcome {
     position: relative;
