添加对话框通信、登录通信

--- a/src/styles/components/sidebar/_recent.scss
+++ b/src/styles/components/sidebar/_recent.scss
@@ -143,12 +143,12 @@
     border-radius: 100%;
   }
 
-  .online-state-ol {
-    background: rgb(25, 139, 82);
+  .online-state__ol {
+    background: #10e475
   }
 
-  .online-state-ofl {
-    background: red;
+  .online-state__ofl {
+    background: #bfbebe;
   }
 
   &__title {
