登陆页样式调整

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -376,6 +376,9 @@
     font-weight: normal;
     color: #fff;
     line-height: 1.2;
+    span {
+      display: inline-block;
+    }
     span:first-child {
       font-size: 38px;
     }
