--- a/src/styles/modals/_crop.scss
+++ b/src/styles/modals/_crop.scss
@@ -1,20 +1,23 @@
 .crop {
   width: 640px;
+  overflow: hidden;
+  text-align: center;
   .crop-wrapper {
     position: relative;
+    display: inline-block;
 
     overflow: hidden;
     &__image-original {
       width: auto;
-      min-width: 100%;
-      max-width: 100%;
+      // min-width: 100%;
+      // max-width: 100%;
       height: auto;
 
       user-select: none;
       transform: scale(1.03);
       pointer-events: none;
 
-      filter: blur(10px) saturate(.2);
+      filter: blur(2px) saturate(.2);
     }
     &__overlay {
       position: absolute;
