--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -181,3 +181,23 @@ body {
     transform: rotate(360deg);
   }
 }
+
+
+// 重定义滚动条
+&::-webkit-scrollbar-track
+{
+  border-radius: 20px;
+  background-color: transparent;
+}
+
+&::-webkit-scrollbar
+{
+  width: 8px;
+  background-color: transparent;
+}
+
+&::-webkit-scrollbar-thumb
+{
+  border-radius: 20px;
+  background-color: rgba(#555, 0.6);
+}
