--- a/src/styles/modals/_quick-search.scss
+++ b/src/styles/modals/_quick-search.scss
@@ -51,8 +51,7 @@
         margin-left: 10px;
         color: rgba(0, 0, 0, 0.5);
         font-size: 21px;
-        vertical-align: text-bottom;
-        transition: all 0.3s ease-out;
+        // transition: all 0.3s ease-out;
         cursor: pointer;
       }
       .title {
