--- a/src/styles/lightbox.scss
+++ b/src/styles/lightbox.scss
@@ -1,14 +1,238 @@
 .jslghtbx {
   z-index: 100;
   .jslghtbx-contentwrapper {
-    img {
+      position: relative;
+      height: 100%;
+      margin: 0 60px;
+    img.jslghtbx-img {
       padding: 0;
       cursor: default;
       box-shadow: 0 4px 10px 0 rgba(0,0,0,.25);
+      opacity: 0;
     }
   }
-
-  &.jslghtbx-active {
-    background-color: $modal-backdrop-color;
+  .img-zoom-box {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    &.jslghtbx-active {
+        background-color: $modal-backdrop-color;
+    }
   }
+  .mag-zoomed {
+      width: 100%;
+      transition: 0.1s opacity;
+      img.jslghtbx-img {
+          opacity: 1;
+      }
+  }
+//   [mag-thumb] img {
+//       width: initial!important;
+//       height: initial!important;
+//   }
+
+
+[mag-theme="default"].mag-zoomed-bg {
+    // background: black;
+}
+
+[mag-theme="default"] .mag-lens {
+    box-shadow: 0 0 4px black;
+    border: 1px solid white;
+    background: rgba(255, 255, 255, 0.25);
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+[mag-theme="default"][mag-position-event="move"] {
+    cursor: crosshair;
+}
+
+[mag-theme="default"][mag-position="drag"],
+[mag-theme="default"][mag-position-event="hold"] {
+    cursor: move;
+    cursor: -webkit-grab;
+    cursor: -moz-grab;
+    cursor: grab;
+}
+
+[mag-theme="default"][mag-position="drag"].mag--dragging,
+[mag-theme="default"][mag-position-event="hold"].mag--dragging {
+    cursor: -webkit-grabbing;
+    cursor: -moz-grabbing;
+    cursor: grabbing;
+}
+
+
+.mag-host {
+    position: relative;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.mag-zoomed-container {
+    position: absolute;
+    /*position: relative;*/
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+}
+
+.mag-zoomed-container > * {
+    position: absolute;
+}
+
+.mag-noflow {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    overflow: hidden;
+}
+
+.mag-noflow > * {
+    position: absolute;
+}
+
+.mag-zoomed {
+    /* under .mag-noflow > * */
+    /*position: absolute;*/
+}
+
+.mag-zoomed img {
+    display: block;
+    // width: 100%;
+    // height: 100%;
+}
+
+.mag-zone {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 2;
+}
+
+.mag-thumb {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
+[mag-thumb] {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
+[mag-thumb] img {
+    display: block;
+}
+
+.mag-lens {
+    position: absolute;
+    z-index: 2;
+}
+
+[mag-zoom] {
+    display: none;
+}
+
+.mag-js [mag-zoom][mag-toggle="false"] {
+    display: block;
+}
+
+[mag-flow="inline"] {
+    display: inline-block;
+    position: relative;
+    width: auto;
+    height: auto;
+}
+[mag-flow="inline"] .mag-thumb {
+    position: relative;
+}
+
+.github-buttons {
+    margin: 15px 0;
+}
+
+.github-buttons img {
+    display: block;
+    float: left;
+    margin: 0 10px 10px 0;
+}
+
+.proportion {
+    position: relative;
+}
+
+.proportion .filler {
+    width: 100%;
+    padding-top: 60%;
+}
+
+
+.mag-eg-row {
+    margin-bottom: 15px;
+}
+.mag-eg-el-wrap {
+  margin-bottom: 15px;
+  width: 100%;
+}
+.mag-eg-doc {
+    margin: 20px;
+}
+
+.outer-wrap {
+    position: relative;
+    float: left;
+}
+/*
+[mag-zoom="outer"] {
+    position: absolute;
+    z-index: 10;
+    left: 100%;
+}
+*/
+[mag-thumb="inner-inline"] {
+    float: left;
+}
+
+
+.mag-eg-hud {
+    position: absolute;
+    z-index: 10;
+    text-align: right;
+    padding: 0.5em;
+    color: white;
+    background: black;
+    background: rgba(0,0,0,0.5);
+}
+
+.mag-eg-hud-left {
+    left: 0;
+    bottom: 0;
+    text-align: left;
+}
+
+.mag-eg-hud-right {
+    right: 0;
+    bottom: 0;
+    text-align: right;
+}
+
 }
