--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -675,6 +675,11 @@ $sticker-max-size: 180px;
       background-color: transparent;
     }
   }
+  .systext{
+    font-size: 12px;
+    color: #a7a7a7;
+    text-align: center;
+  }
   .photo {
     line-height: 0;
 
