通讯录群组数据修复

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -677,7 +677,7 @@ $sticker-max-size: 180px;
   }
   .systext{
     font-size: 12px;
-    color: #a7a7a7;
+    color: #b9b9ba;
     text-align: center;
   }
   .photo {
