聊天消息隐藏删除操作，添加没有操作项样式

--- a/src/styles/dropdown.scss
+++ b/src/styles/dropdown.scss
@@ -117,6 +117,18 @@
           fill: white !important;
         }
       }
+      &.text {
+        cursor: default !important;
+        padding-left: 24px !important;
+        &:hover {
+          color: rgba(0, 0, 0, 0.4) !important;
+          background-color: transparent !important;
+        }
+        
+      }
+      & + &.text {
+        display: none;
+      }
     }
     &__separator {
       height: 8px;
